[package]
name = "converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6.0"
tokio = { version = "1", features = ["full"] }
encoding = "0.2"
quick-xml = { version = "0.31", features = ["encoding", "serialize"] }
xml-rs = "0.8.19"
encoding_rs = "0.8.23"
xml = "0.8.10"