[package]
name = "converter"
version = "0.1.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.23", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.31", features = ["encoding", "serialize"] }
encoding_rs = "0.8.23"
serde_json = "1.0.111"
bytes = { version = "1.5.0", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive"] }
