[package]
name = "converter"
version = "0.1.2"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.23", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.31", features = ["encoding", "serialize"] }
encoding_rs = "0.8.23"
serde_json = "1.0.111"
bytes = { version = "1.5.0", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive"] }

[profile.release]
opt-level = 'z' # Optimize for size
lto = true
codegen-units = 1
strip = true
panic = "abort"